<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp">

        <TextView
            android:id="@+id/textViewPrvious"
            android:layout_width="316dp"
            android:layout_height="52dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewOperation"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button4" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button7" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonClear" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button2" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button5" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button8" />

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button3" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button6" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button9" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonDecimalPoint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="149dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonDivide" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonMultply" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonMinus" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonPlus" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonEqual" />

</LinearLayout>